--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,6 @@
     <property environment="env"/>
     <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
     <target name="deployall">
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app"/>
+      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app/main/default/"/>
     </target>
 </project>
